chore: its now a proper beta

--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,97 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Darmon - Creative Portfolio</title>
+
+    <!-- Primary Meta Tags -->
+    <title>
+      Apostle Damorn Shunet - Author, Speaker & Founder of Reign City Chapel
+    </title>
     <meta
       name="description"
-      content="Crafting extraordinary digital experiences that inspire and captivate."
+      content="Apostle Damorn Shunet is a passionate servant of God, author, songwriter, and speaker. Founder of Reign City Chapel and Gen Z Loves Jesus movement in Nairobi, Kenya."
     />
+    <meta name="author" content="Apostle Damorn Shunet" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://damornshunet.com/" />
+    <meta
+      property="og:title"
+      content="Apostle Damorn Shunet - Author, Speaker & Founder of Reign City Chapel"
+    />
+    <meta
+      property="og:description"
+      content="Apostle Damorn Shunet is a passionate servant of God, author, songwriter, and speaker. Founder of Reign City Chapel and Gen Z Loves Jesus movement in Nairobi, Kenya."
+    />
+    <meta
+      property="og:image"
+      content="https://damornshunet.com/images/damorn-shunet-og-image.jpg"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://damornshunet.com/" />
+    <meta
+      property="twitter:title"
+      content="Apostle Damorn Shunet - Author, Speaker & Founder of Reign City Chapel"
+    />
+    <meta
+      property="twitter:description"
+      content="Apostle Damorn Shunet is a passionate servant of God, author, songwriter, and speaker. Founder of Reign City Chapel and Gen Z Loves Jesus movement in Nairobi, Kenya."
+    />
+    <meta
+      property="twitter:image"
+      content="https://damornshunet.com/images/damorn-shunet-twitter-image.jpg"
+    />
+
+    <!-- Additional SEO Meta Tags -->
+    <meta
+      name="keywords"
+      content="Apostle Damorn Shunet, Reign City Chapel, Gen Z Loves Jesus, Christian author, Christian speaker, Nairobi church, Christian ministry, spiritual transformation, biblical insights"
+    />
+    <meta name="robots" content="index, follow" />
+    <link rel="canonical" href="https://damornshunet.com/" />
+
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Person",
+        "name": "Apostle Damorn Shunet",
+        "jobTitle": "Author, Speaker, Founder and Lead Pastor",
+        "description": "Apostle Damorn Shunet is a passionate servant of God, author, songwriter, and speaker. Founder of Reign City Chapel and Gen Z Loves Jesus movement.",
+        "url": "https://damornshunet.com/",
+        "sameAs": [
+          "https://www.facebook.com/damornshunet",
+          "https://www.instagram.com/damornshunet",
+          "https://www.youtube.com/c/damornshunet"
+        ],
+        "worksFor": {
+          "@type": "Organization",
+          "name": "Reign City Chapel"
+        },
+        "alumniOf": {
+          "@type": "EducationalOrganization",
+          "name": "University of Nairobi"
+        },
+        "knowsAbout": [
+          "Christian Ministry",
+          "Biblical Teaching",
+          "Spiritual Transformation",
+          "Worship Music",
+          "Book Writing"
+        ],
+        "spouse": {
+          "@type": "Person",
+          "name": "Prophetess Grace Shunet"
+        },
+        "homeLocation": {
+          "@type": "Place",
+          "name": "Nairobi, Kenya"
+        }
+      }
+    </script>
+
     <!-- TAILWIND -->
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 
@@ -20,8 +106,104 @@
       rel="stylesheet"
     />
   </head>
-  <body>
+  <body class="bg-white font-inter">
     <div id="root"></div>
+
+    <!-- Fallback content for SEO and accessibility -->
+    <noscript>
+      <div class="container mx-auto px-4 py-8">
+        <h1 class="text-3xl font-bold mb-4 font-playfair">
+          Apostle Damorn Shunet
+        </h1>
+        <p class="mb-4">
+          Author, Speaker, Founder and Lead Pastor of Reign City Chapel
+        </p>
+
+        <section class="mb-8">
+          <h2 class="text-2xl font-semibold mb-3 font-playfair">
+            About Apostle Damorn Shunet
+          </h2>
+          <p class="mb-3">
+            Apostle Damorn Shunet is a passionate servant of God with a deep
+            desire to know God and making Him known. Beyond the pulpit, he is an
+            author, songwriter, and speaker whose influence extends through
+            various digital platforms.
+          </p>
+          <p class="mb-3">
+            His messages combine deep biblical insight with a practical approach
+            to faith, inspiring transformation across generations.
+          </p>
+          <p>
+            He is the Founder and Lead Pastor of Reign City Chapel, a thriving
+            Christ-centered ministry committed to equipping believers to walk in
+            power, purpose and dominion.
+          </p>
+        </section>
+
+        <section class="mb-8">
+          <h2 class="text-2xl font-semibold mb-3 font-playfair">Ministries</h2>
+
+          <div class="mb-6">
+            <h3 class="text-xl font-semibold mb-2">Reign City Chapel</h3>
+            <p class="mb-2">
+              The mission of Reign City Chapel is to create an environment for
+              God's people to grow in the things of God, as they exercise
+              dominion in every sphere of their lives on earth as it is in
+              heaven.
+            </p>
+            <p>
+              <strong>Sunday Services:</strong> Every Sunday from 10am at KICC,
+              Aberdare Hall, Nairobi, Kenya.
+            </p>
+          </div>
+
+          <div>
+            <h3 class="text-xl font-semibold mb-2">Gen Z Loves Jesus</h3>
+            <p class="mb-2">
+              A movement passionate about seeing an entire generation - Gen Z -
+              fall in love with Jesus, walk in His light, and impact the world
+              through His Love.
+            </p>
+            <p>
+              The mission is to spark a revival that starts with soul-winning,
+              discipleship, and empowering young people to boldly minister to
+              their peers.
+            </p>
+          </div>
+        </section>
+
+        <section class="mb-8">
+          <h2 class="text-2xl font-semibold mb-3 font-playfair">Books</h2>
+          <ul class="list-disc pl-5">
+            <li class="mb-2">
+              <strong>What God Says About Your Identity</strong> (2019) -
+              Biblical insights that shift our perception of who we think we are
+              into the truth of who God says we are.
+            </li>
+            <li>
+              <strong
+                >The Unseen Advantage: Understanding Spiritual Realities</strong
+              >
+              (2025) - A transformative journey into the spiritual realm,
+              revealing truths that have been hidden in plain sight.
+            </li>
+          </ul>
+        </section>
+
+        <section>
+          <h2 class="text-2xl font-semibold mb-3 font-playfair">
+            Personal Life
+          </h2>
+          <p>
+            Apostle Damorn is married to Prophetess Grace Shunet, and together
+            they serve as a strong ministry team, modeling godly leadership,
+            faith, and partnership in advancing the gospel of Christ. They are
+            based in Nairobi, Kenya together with their 3 wonderful children.
+          </p>
+        </section>
+      </div>
+    </noscript>
+
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
